--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <div class="for_links"> 
             <a href="https://betting-base.netlify.app/" target="_blank">Betting Base</a><br />
             <a href="https://ivanr-portfolio.netlify.app/" target="_blank">Ivan R. Portfolio</a><br />
-            <a href="https://best-movies19.netlify.app/" target="_blank">Movie Posters</a><br />
+            <a href="https://best-movies19.netlify.app/" target="_blank">Best Movies</a><br />
             <a href="https://photography-full-screen-slider.netlify.app/" target="_blank">Photography Full Screen Slider</a><br />
             <a href="https://hranairecepti.info/" target="_blank">Food & Recepies</a>        
        </div>
