--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <a href="https://betting-base.netlify.app/" target="_blank">Betting Base</a><br />
             <a href="https://ivanr-portfolio.netlify.app/" target="_blank">Ivan R. Portfolio</a><br />
             <a href="https://best-movies19.netlify.app/" target="_blank">Best Movies</a><br />
-            <a href="https://photography-full-screen-slider.netlify.app/" target="_blank">Photography Full Screen Slider</a><br />                    
+            <a href="https://photography-full-screen-slider.netlify.app/" target="_blank">Photography Full Screen Slider</a><br /> 
+            <a href="https://ulcerozni-kolitis.netlify.app/" target="_blank">Ulcerozni Kolitis</a>                   
        </div>
     </div>    
 </body>
